--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
+# Ignore all
 *
-!*.cpp
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+# Above combination will ignore all files without extension
+# https://stackoverflow.com/questions/5711120/gitignore-binary-files-that-have-no-extension
 
 
